Search z-index fix

--- a/main.user.less
+++ b/main.user.less
@@ -1,7 +1,7 @@
 /* ==UserStyle==text
 @name           Musescore dark
 @namespace      https://github.com/Vacym
-@version        1.0.5
+@version        1.0.6
 @description    Dark theme for musescore.com with score inverting and customizable colors
 @author         Vacym
 @homepageURL    https://github.com/Vacym/Musescore-Dark
@@ -1511,6 +1511,6 @@ url-prefix("https://musescore.com/licensing")
 
   /* search */
   .ic0KS {
-    z-index: 1049;
+    z-index: 1000;
   }
 }
